kubernetes/apps/networking/whoami/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: >
        Host(`whoami.${SECRET_DOMAIN}`) && ClientIP(`10.1.0.0/16`, `192.168.1.0/24`)
      middlewares:
        - name: internal
        # - name: basicauth
      priority: 1
      services:
        - name: whoami
          namespace: networking
          port: 80
    ## https://github.com/traefik/traefik/issues/7735#issuecomment-758545590
    - kind: Rule
      # require cloudflared pod IDs
      match: >
        Host(`whoami.${SECRET_DOMAIN}`) && ClientIP(`10.42.0.0/16`)
      middlewares:
        - name: external
        # - name: basicauth
      priority: 2
      services:
        - name: whoami
          namespace: networking
          port: 80

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
